# ucx-bxi

./: .clang-format  FORTH.md  configure.ac
config/m4/: bxi.m4
src/ucp/: Makefile.am
src/ucp/api/: ucp.h  ucp_def.h
src/ucp/core/: ucp_context.c  ucp_context.h  ucp_request.h  ucp_request.inl  ucp_types.h  ucp_worker.c
src/ucp/proto/: proto.c  proto_common.c  proto_common.h  proto_common.inl  proto_select.h  proto_select.inl
src/ucp/rndv/: proto_rndv.c
src/ucp/tag/: offload.c  offload.h  tag_match.c  tag_match.h  tag_recv.c  tag_rndv.c  tag_rndv.h  tag_send.c
src/ucp/tag/offload/: eager.c  operation.c  operation.h  rma.c  rndv.c  sched.c  sched.h  tcache.c  tcache.h
src/uct/: Makefile.am  configure.m4
src/uct/api/: tl.h  uct.h  uct_def.h
src/uct/api/v2/: uct_v2.h
src/uct/base/: uct_iface.c  uct_iface.h
src/uct/bxi/: Makefile.am  bxi.h  bxi_ep.c  bxi_ep.h  bxi_iface.c  bxi_iface.h  bxi_log.h  bxi_md.c  bxi_md.h  bxi_rxq.c  bxi_rxq.h  configure.m4  ptl_types.h  ucx-bxi.pc.in
src/uct/bxi/am/: ptl_am_ep.c  ptl_am_ep.h  ptl_am_iface.c  ptl_am_iface.h  ptl_am_md.c  ptl_am_md.h
src/uct/bxi/base/: ptl_ep.c  ptl_ep.h  ptl_iface.c  ptl_iface.h  ptl_md.c  ptl_md.h  ptl_rq.c  ptl_rq.h
src/uct/bxi/rma/: ptl_rma_ep.c  ptl_rma_ep.h  ptl_rma_iface.c  ptl_rma_iface.h  ptl_rma_md.c  ptl_rma_md.h
src/uct/bxi/tag/: ptl_tag_ep.c  ptl_tag_ep.h  ptl_tag_iface.c  ptl_tag_iface.h  ptl_tag_md.c  ptl_tag_md.h
test/gtest/ucp/: test_ucp_perf.cc  test_ucp_tag.cc  test_ucp_tag_mem_type.cc  test_ucp_tag_offload.cc  test_ucp_wireup.cc  ucp_test.cc  ucp_test.h
test/gtest/uct/: test_amo.h  test_p2p_am.cc  test_tag.cc  test_uct_perf.cc  uct_test.h
